Fixes #8, alignment for Contact Us
Fixed alignment for left on larger devices. Mobile device will have center alignment only.

--- a/css/styles.css
+++ b/css/styles.css
@@ -554,6 +554,13 @@ footer .divider {
 
 }
 
+.contact-section {
+
+  text-align: left;
+  padding-left: 4rem;
+
+}
+
 
 }
 
